Fix package.json files

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "sml-eats-api",
-  "private": "true",
+  "name": "server",
   "main": "build/index.js",
   "scripts": {
     "dev": "concurrently \"tsc --watch\" \"nodemon -q build/index.js\"",
