Add prisma schema file in the root package.json

--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "eslint-config-custom": "workspace:*",
     "prettier": "latest",
     "turbo": "latest"
   },
@@ -20,5 +19,8 @@
     "node": ">=14.0.0"
   },
   "dependencies": {},
-  "packageManager": "pnpm@7.12.2"
+  "packageManager": "pnpm@7.12.2",
+  "prisma": {
+    "schema": "apps/server/prisma/schema.prisma"
+  }
 }
