--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -12,13 +12,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "express-rate-limit": "^6.6.0",
     "helmet": "^6.0.0",
+    "types": "*",
     "xss-clean": "^0.1.1",
-    "zod": "^3.19.1",
-    "types": "*"
+    "zod": "^3.19.1"
   },
   "devDependencies": {
-    "tsconfig": "*",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
@@ -27,6 +27,7 @@
     "nodemon": "^2.0.19",
     "prisma": "^4.3.1",
     "ts-node": "^10.9.1",
+    "tsconfig": "*",
     "typescript": "^4.8.3"
   },
   "prisma": {
