--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@reduxjs/toolkit": "^1.8.5",
     "@sentry/nextjs": "^7.0.0",
     "axios": "^0.27.2",
     "next": "^12.1.6",
@@ -16,6 +17,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hot-toast": "^2.4.0",
+    "react-redux": "^8.0.4",
     "swr": "^1.3.0",
     "usehooks-ts": "^2.5.3"
   },
