--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -22,20 +22,13 @@
     "usehooks-ts": "^2.5.3"
   },
   "devDependencies": {
-    "@testing-library/dom": "^8.13.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.2.0",
-    "@types/jest": "^28.1.1",
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
-    "@types/testing-library__jest-dom": "^5.14.3",
     "autoprefixer": "^10.4.7",
+    "cypress": "^10.11.0",
     "eslint": "^8.16.0",
     "eslint-config-next": "^12.1.6",
     "eslint-config-prettier": "^8.5.0",
-    "jest": "^28.1.0",
-    "jest-environment-jsdom": "^28.1.1",
     "postcss": "^8.4.14",
     "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.11",
