--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,8 +6,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Install pnpm
         uses: pnpm/action-setup@v2
+
+      - name: Move into the client folder
+        run: cd apps/client
+
       - name: Cypress run
         uses: cypress-io/github-action@v5
         with:
