--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,14 +7,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-
-      - name: Move into the client folder
-        run: cd apps/client
-
-      - name: Cypress run
-        uses: cypress-io/github-action@v5
-        with:
-          build: pnpm build
-          start: pnpm dev
+      - name: Do stuffs
+        run: |
+          npm install -g pnpm
+          pnpm install
+          pnpm build
+          cd apps/client
+          pnpm test
