--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,6 @@ jobs:
         run: |
           npm install -g pnpm
           pnpm install
-          pnpm build
+          pnpm dev
           cd apps/client
           pnpm test
