--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Install pnpm
+        uses: npm i -g pnpm
+
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
       - name: Run end-to-end tests
