--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,13 +7,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Install pnpm
-        run: npm i -g pnpm
-
-      # Install NPM dependencies, cache them correctly
-      # and run all Cypress tests
-      - name: Run end-to-end tests
-        uses: cypress-io/github-action@v4
-        with:
-          build: pnpm build
-          start: pnpm dev
+      - name: Do stuffs
+        run: |
+          npm install -g pnpm
+          pnpm install
+          pnpm build
+          cd apps/client
+          pnpm start
+          pnpm test
