--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "dev": "next dev",
     "test": "cypress run",
+    "cypress:open": "cypress open",
     "lint": "next lint",
     "build": "next build",
     "start": "next start"
@@ -25,7 +26,7 @@
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "autoprefixer": "^10.4.7",
-    "cypress": "^11.1.0",
+    "cypress": "^12.2.0",
     "eslint": "^8.16.0",
     "eslint-config-next": "^12.1.6",
     "eslint-config-prettier": "^8.5.0",
