Install turbo ignore

--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "packageManager": "pnpm@7.12.2",
   "prisma": {
     "schema": "apps/server/prisma/schema.prisma"
+  },
+  "dependencies": {
+    "turbo-ignore": "^1.8.3"
   }
 }
